Bugfix: Blurred view in document history viewer. Bugfix: Files can be viewed from dashboard.

--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -936,6 +936,7 @@ h4 {
 	border: 1px solid #dedede;
 	background: $overlayBackgroundColor;
 	backdrop-filter: blur(3px);
+	overflow: hidden;
 }
 
 .toolbar.toolbar-floating .btn {
